added a page listing our publications

--- a/index.html
+++ b/index.html
@@ -102,18 +102,27 @@
         </div>
 
         <div class="w3-card w3-padded-box w3-margin-top">
-            <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
+            <div class="w3-container w3-third w3-margin-top w3-margin-bottom">
                 <a href='pages/research/home.html' style="text-decoration: none;">
                     <div class="w3-card w3-container">
                         <h3>Test Smell Research</h3>
-                        <span><i>Research Data, Exloratory & Ongoing Studies, etc.</i></span>
+                        <span><i>Research Data, Exloratory Studies, etc.</i></span>
                         <br>
                         <i class="fa fa-flask w3-margin-bottom w3-text-theme  w3-fa-spin" style="font-size:100px"></i>
                     </div>
                 </a>
             </div>
 
-            <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
+            <div class="w3-container w3-third w3-margin-top w3-margin-bottom">
+                <a href='pages/testsmellpublications.html' style="text-decoration: none;">
+                    <div class="w3-card w3-container">
+                        <h3>Test Smell Publications</h3><br>
+                        <i class="fa fa-book w3-margin-bottom w3-text-theme w3-fa-spin" style="font-size:100px"></i>
+                    </div>
+                </a>
+            </div>
+            
+            <div class="w3-container w3-third w3-margin-top w3-margin-bottom">
                 <a href='pages/about.html' style="text-decoration: none;">
                     <div class="w3-card w3-container">
                         <h3>About</h3><br>
@@ -124,11 +133,11 @@
 
         </div>
         
-<!--         <div class="w3-card w3-padded-box w3-margin-top">
+         <div class="w3-card w3-padded-box w3-margin-top">
             <div class="w3-container w3-half w3-margin-top w3-margin-bottom">
                 &nbsp;
             </div>
-        </div> -->
+        </div> 
 
     </div>
      <footer class="w3-container w3-teal w3-footer w3-animate-zoom">
