--- a/pages/testsmellexamples.html
+++ b/pages/testsmellexamples.html
@@ -65,6 +65,7 @@
     <li><a class="active" href="testsmellexamples.html">Test Smell Examples</a></li>
     <li><a href="testsmelldetector.html">Test Smell Detector</a></li>
     <li><a href="../pages/research/home.html">Test Smell Research</a></li>
+    <li><a href="testsmellpublications.html">Publications</a></li>
     <li class="right"><a href="about.html">About</a></li>
 </ul>
 
