--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -31,15 +31,15 @@
     <li><a href="testsmellexamples.html">Test Smell Examples</a></li>
     <li><a href="testsmelldetector.html">Test Smell Detector</a></li>
     <li><a href="../pages/research/home.html">Test Smell Research</a></li>
-    <li><a href="testsmellpublications.html">Publications</a></li>
-    <li class="right"><a class="active" href="about.html">About</a></li>
+    <li><a class="active" href="testsmellpublications.html">Publications</a></li>
+    <li class="right"><a href="about.html">About</a></li>
 </ul>
 
 <!-- Header -->
 <header class="w3-container w3-theme w3-padding" id="myHeader">
     <div class="w3-center">
         <!--<a href='../index.html' class='w3-bar-item w3-button w3-hover-theme'><h4>Software Unit Test Smells</h4></a>-->
-        <h1 class="w3-xxxlarge w3-animate-bottom">About</h1>
+        <h1 class="w3-xxxlarge w3-animate-bottom">Publications</h1>
     </div>
 </header>
 
@@ -51,23 +51,18 @@
         </p>
          -->
         <p>
-            This research on unit test smells, along with the implementation of the test smell detection tool was
-            performed by the faculty and students of the <a href="http://www.se.rit.edu/" target="_blank">Department of
-            Software
-            Engineering</a> of <a href="http://www.rit.edu/" target="_blank">Rochester Institute of
-            Technology</a>, New York.
-        </p>
-        <p>
-            We invite fellow researchers and software engineers to provide us with feedback and extensions on our
-            research and tool. Please feel free to reach out to any of the following individuals with your feedback or
-            questions:
+            Listed below are peer-reviewed publications on our research around test smells:
         <ul>
-            <li><a href="https://github.com/shehan" target="_blank">Anthony Peruma</a></li>
-            <li><a href="https://github.com/mkaouer" target="_blank">Mohamed Wiem Mkaouer</a></li>
-            <li><a href="https://github.com/khalidsalmalki" target="_blank">Khalid Almalki</a></li>
-            <li><a href="https://github.com/cnewman" target="_blank">Christian D. Newman</a></li>
-            <li><a href="https://github.com/ouniali" target="_blank">Ali Ouni</a></li>
-            <li><a href="https://dibt.unimol.it/staff/fpalomba/" target="_blank">Fabio Palomba</a></li>
+            <li>
+                Anthony Peruma, Khalid Almalki, Christian D. Newman, Mohamed Wiem Mkaouer, Ali Ouni, and Fabio Palomba. 2019. 
+                <b>On the Distribution of Test Smells in Open Source Android Applications: An Exploratory Study</b>. 
+                In Proceedings of the 29th Annual International Conference on Computer Science and Software Engineering (CASCON '19). IBM Corp., Riverton, NJ, USA.
+                <p>
+                <a href="../assets/publications/CASCON2019_TechnicalPaper.pdf" target="_blank">
+                    <span class=" w3-small w3-left-align">Download Publication</span>
+                </a>
+            </p>
+            </li>
         </ul>
         </p>
     </div>
