--- a/pages/research/home.html
+++ b/pages/research/home.html
@@ -68,6 +68,7 @@
         <li><a href="../testsmellexamples.html">Test Smell Examples</a></li>
         <li><a href="../testsmelldetector.html">Test Smell Detector</a></li>
         <li><a class="active" href="#">Test Smell Research</a></li>
+        <li><a href="../testsmellpublications.html">Publications</a></li>
         <li class="right"><a href="../about.html">About</a></li>
     </ul>
 
@@ -203,7 +204,7 @@
             <div class="w3-container" id="TechnicalDebt">
                 <h5>Test Smells & Technical Debt</h5>
                 <p>
-                    Do test smells act as an indicator of technical debt within the test suite?
+                Do test smells act as an indicator of technical debt within the test suite?
                 </p>
                 <p>
                     The intuition behind this research question resides in validating whether the intentional deviation
