--- a/pages/research/smellintroduction.html
+++ b/pages/research/smellintroduction.html
@@ -68,6 +68,7 @@
         <li><a href="../testsmellexamples.html">Test Smell Examples</a></li>
         <li><a href="../testsmelldetector.html">Test Smell Detector</a></li>
         <li><a class="active" href="home.html">Test Smell Research</a></li>
+        <li><a href="../testsmellpublications.html">Publications</a></li>
         <li class="right"><a href="../about.html">About</a></li>
     </ul>
 
