--- a/pages/testsmelldetector-architecture.html
+++ b/pages/testsmelldetector-architecture.html
@@ -33,6 +33,7 @@
         <li><a href="testsmellexamples.html">Test Smell Examples</a></li>
         <li><a class="active" href="testsmelldetector.html">Test Smell Detector</a></li>
         <li><a href="../pages/research/home.html">Test Smell Research</a></li>
+        <li><a href="testsmellpublications.html">Publications</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
 
