added link to CASCON 2019 presentation

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -61,6 +61,10 @@
                 <a href="../assets/publications/CASCON2019_TechnicalPaper.pdf" target="_blank">
                     <span class=" w3-small w3-left-align">Download Publication</span>
                 </a>
+                <br>
+                <a href="../assets/publications/CASCON2019_Presentation.pdf" target="_blank">
+                    <span class=" w3-small w3-left-align">Download Presentation</span>
+                </a>
             </p>
             </li>
         </ul>
