added page (and inital content) for the work on refactoring of test files

--- a/pages/research/home.html
+++ b/pages/research/home.html
@@ -99,6 +99,9 @@
                 <li>
                     <a href="#TestSuiteCharacteristics">Test Suite Characteristics</a>
                 </li>
+                <li>
+                    <a href="#TestSmellRefactoring">Test Smell Refactoring</a>
+                </li>
                 <!--
                 <li>
                     <a href="#TestSmellIntroduction">Test Smell Introduction</a>
@@ -159,6 +162,20 @@
                     apps test suite.
                     <br>
                     <span class=" w3-small w3-left-align"><a href="testsuitecharacteristics.html">Click to continue
+                            reading...</a></span>
+                </p>
+                <p>
+                    <span class=" w3-large w3-right"><a href="#pageBody"><i class="fa fa-arrow-circle-up"></i></a></span>
+                </p>
+            </div>
+            <div class="w3-container" id="TestSmellRefactoring">
+                <h5>Test Smell Refactoring</h5>
+                <p>
+                    The goal of this work is to understand the relationship between refactoring changes and their effect
+                    on test smells. We empirically explore the impact and relationship between refactoring operations and test smells in 250 open-source Android apps.
+                    </p>
+                <p>                    
+                    <span class=" w3-small w3-left-align"><a href="refactoring.html">Click to continue
                             reading...</a></span>
                 </p>
                 <p>
