--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Software Unit Test Smells</title>
     <meta charset="UTF-8">
@@ -23,62 +24,99 @@
     </script>
 
 </head>
+
 <body>
 
-<ul class="topnav w3-small">
-    <li><a href="../index.html">Home</a></li>
-    <li><a href="testsmells.html">Test Smell Types</a></li>
-    <li><a href="testsmellexamples.html">Test Smell Examples</a></li>
-    <li><a href="testsmelldetector.html">Test Smell Detector</a></li>
-    <li><a href="../pages/research/home.html">Test Smell Research</a></li>
-    <li><a class="active" href="testsmellpublications.html">Publications</a></li>
-    <li class="right"><a href="about.html">About</a></li>
-</ul>
+    <ul class="topnav w3-small">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="testsmells.html">Test Smell Types</a></li>
+        <li><a href="testsmellexamples.html">Test Smell Examples</a></li>
+        <li><a href="testsmelldetector.html">Test Smell Detector</a></li>
+        <li><a href="../pages/research/home.html">Test Smell Research</a></li>
+        <li><a class="active" href="testsmellpublications.html">Publications</a></li>
+        <li class="right"><a href="about.html">About</a></li>
+    </ul>
 
-<!-- Header -->
-<header class="w3-container w3-theme w3-padding" id="myHeader">
-    <div class="w3-center">
-        <!--<a href='../index.html' class='w3-bar-item w3-button w3-hover-theme'><h4>Software Unit Test Smells</h4></a>-->
-        <h1 class="w3-xxxlarge w3-animate-bottom">Publications</h1>
-    </div>
-</header>
+    <!-- Header -->
+    <header class="w3-container w3-theme w3-padding" id="myHeader">
+        <div class="w3-center">
+            <!--<a href='../index.html' class='w3-bar-item w3-button w3-hover-theme'><h4>Software Unit Test Smells</h4></a>-->
+            <h1 class="w3-xxxlarge w3-animate-bottom">Publications</h1>
+        </div>
+    </header>
 
-<div class="w3-center w3-padding-32">
-    <div class="w3-card w3-container w3-justify w3-padded-box">
-        <!-- 
+    <div class="w3-center w3-padding-32">
+        <div class="w3-card w3-container w3-justify w3-padded-box">
+            <!-- 
         <p>
             Content not availalbe due to double blind review requirements. 
         </p>
          -->
-        <p>
-            Listed below are peer-reviewed publications on our research around test smells:
-        <ul>
-            <li>
-                Anthony Peruma, Khalid Almalki, Christian D. Newman, Mohamed Wiem Mkaouer, Ali Ouni, and Fabio Palomba. 2019. 
-                <b>On the Distribution of Test Smells in Open Source Android Applications: An Exploratory Study</b>. 
-                In Proceedings of the 29th Annual International Conference on Computer Science and Software Engineering (CASCON '19). IBM Corp., Riverton, NJ, USA.
-                <p>
-                <a href="../assets/publications/CASCON2019_TechnicalPaper.pdf" target="_blank">
-                    <span class=" w3-small w3-left-align">Download Publication</span>
-                </a>
-                <br>
-                <a href="../assets/publications/CASCON2019_Presentation.pdf" target="_blank">
-                    <span class=" w3-small w3-left-align">Download Presentation</span>
-                </a>
+            <p>
+                Listed below are our peer-reviewed research publications around test smells:
+                <ul>
+                    <li>
+                        Anthony Peruma, Christian D. Newman, Mohamed Wiem Mkaouer, Ali Ouni, and Fabio Palomba. 2020.
+                        <b>An Exploratory Study on the Refactoring of Unit Test Files in Android Applications</b>.
+                        In Proceedings of the 4th International Workshop on Refactoring (IWoR 2020). Association for
+                        Computing Machinery, New York, NY, USA.
+                        <p>
+                            <a href="../assets/publications/IWoR2020_TechnicalPaper.pdf" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Publication</span>
+                            </a>
+                            <br>
+                            <a href="#" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Presentation</span>
+                            </a>
+                        </p>
+                    </li>
+                    <li>
+                        Anthony Peruma, Khalid Almalki, Christian D. Newman, Mohamed Wiem Mkaouer, Ali Ouni, and Fabio
+                        Palomba. 2019.
+                        <b>On the Distribution of Test Smells in Open Source Android Applications: An Exploratory
+                            Study</b>.
+                        In Proceedings of the 29th Annual International Conference on Computer Science and Software
+                        Engineering (CASCON '19). IBM Corp., Riverton, NJ, USA.
+                        <p>
+                            <a href="../assets/publications/CASCON2019_TechnicalPaper.pdf" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Publication</span>
+                            </a>
+                            <br>
+                            <a href="../assets/publications/CASCON2019_Presentation.pdf" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Presentation</span>
+                            </a>
+                        </p>
+                    </li>
+                </ul>
             </p>
-            </li>
-        </ul>
-        </p>
+            <br>
+            <p>
+                Listed below are publications that utilize our tools/datasets:
+                <ul style="font-size: small;">
+                    <li>
+                        Dong Jae Kim. 2020. An Empirical Study on the Evolution of Test Smell. In Proceedings of ICSE
+                        '2020: the 42nd International Conference on Software Engineering (ICSE '2020). ACM, New York,
+                        NY, USA, 3 pages. https://doi.org/10.1145/1122445.1122456
+                    </li>
+                    <li>
+                        Schvarcbacher, M., Spadini, D., Bruntink, M., & Oprescu, A. (2019). Investigating developer
+                        perception on test smells using better code hub - Work in progress -. In A. Etien (Ed.), SATTOSE
+                        2019 Seminar Series on Advanced Techniques & Tools for Software Evolution: Proceedings of the
+                        Seminar Series on Advanced Techniques & Tools for Software Evolution (SATTOSE 2019) (pp. 1-6).
+                        (CEUR Workshop Proceedings; Vol. 2510). CEUR-WS.org.
+                    </li>
+                </ul>
+            </p>
+        </div>
     </div>
-</div>
 
 
-<footer class="w3-container w3-teal w3-footer w3-animate-opacity">
-    <p class="w3-small">
-        Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/"
-                                                                                   style="text-decoration: none;"
-                                                                                   target="_blank">RIT</a>
-    </p>
-</footer>
+    <footer class="w3-container w3-teal w3-footer w3-animate-opacity">
+        <p class="w3-small">
+            Made with <i class="fa fa-heart w3-animate-fading2  w3-fa-spin"></i> at <a href="http://www.se.rit.edu/"
+                style="text-decoration: none;" target="_blank">RIT</a>
+        </p>
+    </footer>
 </body>
+
 </html>
