added new citing paper

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -95,8 +95,13 @@
                 <ul style="font-size: small;">
                     <li>
                         Dong Jae Kim. 2020. An Empirical Study on the Evolution of Test Smell. In Proceedings of ICSE
-                        '2020: the 42nd International Conference on Software Engineering (ICSE '2020). ACM, New York,
+                        2020: the 42nd International Conference on Software Engineering (ICSE 2020). ACM, New York,
                         NY, USA, 3 pages. https://doi.org/10.1145/1122445.1122456
+                    </li>
+                    <li>
+                        Spadini, Davide, Martin Schvarcbacher, Ana-Maria Oprescu, Magiel Bruntink, and Alberto
+                        Bacchelli. 2020. Investigating Severity Thresholds for Test Smells. In Proceedings of the 17th
+                        International Conference on Mining Software Repositories (MSR 2020).
                     </li>
                     <li>
                         Schvarcbacher, M., Spadini, D., Bruntink, M., & Oprescu, A. (2019). Investigating developer
