--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </p>
             <p>
                 <h5 style="text-decoration: underline">Tool Demonstration</h5>
-                <iframe width="550" height="305" src="https://www.youtube.com/embed/kzRSadHo5YA?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="550" height="305" src="https://www.youtube.com/embed/clJBz6OGq_M?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </p>
         </div>
 
