--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -65,8 +65,12 @@
                                 <span class=" w3-small w3-left-align">Download Publication</span>
                             </a>
                             <br>
-                            <a href="#" target="_blank">
+                            <a href="../assets/publications/IWoR2020_Presentation.pdf" target="_blank">
                                 <span class=" w3-small w3-left-align">Download Presentation</span>
+                            </a>
+                            <br>
+                            <a href="https://www.youtube.com/watch?v=0G-EifaDuz4" target="_blank">
+                                <span class=" w3-small w3-left-align">Recorded Presentation</span>
                             </a>
                         </p>
                     </li>
