added a new study that uses tsdetect

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -98,6 +98,12 @@
                 Listed below are publications that utilize our tools/datasets:
                 <ul style="font-size: small;">
                     <li>
+                        G. Fraser, A. Gambi and J. M. Rojas, "Teaching Software Testing with the Code Defenders Testing
+                        Game: Experiences and Improvements," 2020 IEEE International Conference on Software Testing,
+                        Verification and Validation Workshops (ICSTW), Porto, Portugal, 2020, pp. 461-464, doi:
+                        10.1109/ICSTW50294.2020.00082.
+                    </li>
+                    <li>
                         Dong Jae Kim. 2020. An Empirical Study on the Evolution of Test Smell. In Proceedings of ICSE
                         2020: the 42nd International Conference on Software Engineering (ICSE 2020). ACM, New York,
                         NY, USA, 3 pages. https://doi.org/10.1145/1122445.1122456
