added entry for FSE paper (need to update links)

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -56,6 +56,27 @@
                 Listed below are our peer-reviewed research publications around test smells:
                 <ul>
                     <li>
+                        Anthony Peruma, Khalid Almalki, Christian D. Newman, Mohamed Wiem Mkaouer, Ali Ouni, and Fabio
+                        Palomba. 2020.
+                        <b>tsDetect: An Open Source Test Smells Detection Tool</b>.
+                        In Proceedings of the 2020 28th ACM Joint Meeting on European Software Engineering Conference and
+                        Symposium on the Foundations of Software Engineering (ESEC/FSE 2020). Association for
+                        Computing Machinery, New York, NY, USA.
+                        <p>
+                            <a href="#" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Publication</span>
+                            </a>
+                            <br>
+                            <a href="#" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Presentation</span>
+                            </a>
+                            <br>
+                            <a href="#" target="_blank">
+                                <span class=" w3-small w3-left-align">Recorded Presentation</span>
+                            </a>
+                        </p>
+                    </li>
+                    <li>
                         Anthony Peruma, Christian D. Newman, Mohamed Wiem Mkaouer, Ali Ouni, and Fabio Palomba. 2020.
                         <b>An Exploratory Study on the Refactoring of Unit Test Files in Android Applications</b>.
                         In Proceedings of the 4th International Workshop on Refactoring (IWoR 2020). Association for
