added preprint to FSE tool paper

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -59,11 +59,11 @@
                         Anthony Peruma, Khalid Almalki, Christian D. Newman, Mohamed Wiem Mkaouer, Ali Ouni, and Fabio
                         Palomba. 2020.
                         <b>tsDetect: An Open Source Test Smells Detection Tool</b>.
-                        In Proceedings of the 2020 28th ACM Joint Meeting on European Software Engineering Conference and
-                        Symposium on the Foundations of Software Engineering (ESEC/FSE 2020). Association for
-                        Computing Machinery, New York, NY, USA.
+                        In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on the
+                        Foundations of Software Engineering (ESEC/FSE '20), November 8–13, 2020, Virtual Event,
+                        USA. ACM, New York, NY, USA, 5 pages. https://doi.org/10.1145/3368089.3417921
                         <p>
-                            <a href="#" target="_blank">
+                            <a href="../assets/publications/FSE2020_TechnicalPaper.pdf" target="_blank">
                                 <span class=" w3-small w3-left-align">Download Publication</span>
                             </a>
                             <br>
