--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -59,7 +59,8 @@
                         Anthony Peruma, Khalid Almalki, Christian D. Newman, Mohamed Wiem Mkaouer, Ali Ouni, and Fabio
                         Palomba. 2020.
                         <b>tsDetect: An Open Source Test Smells Detection Tool</b>.
-                        In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on the
+                        In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on
+                        the
                         Foundations of Software Engineering (ESEC/FSE '20), November 8–13, 2020, Virtual Event,
                         USA. ACM, New York, NY, USA, 5 pages. https://doi.org/10.1145/3368089.3417921
                         <p>
@@ -118,6 +119,12 @@
             <p>
                 Listed below are publications that utilize our tools/datasets:
                 <ul style="font-size: small;">
+                    <li>
+                        Panichella, A., Panichella, S., Fraser, G., Sawant, A. A., & Hellendoorn, V. J. (Accepted/In
+                        press). Revisiting Test Smells in Automatically Generated Tests: Limitations, Pitfalls, and
+                        Opportunities. In 36th IEEE The International Conference on Software Maintenance and Evolution
+                        (ICSME 2020) IEEE. https://doi.org/10.5281/zenodo.4000852
+                    </li>
                     <li>
                         G. Fraser, A. Gambi and J. M. Rojas, "Teaching Software Testing with the Code Defenders Testing
                         Game: Experiences and Improvements," 2020 IEEE International Conference on Software Testing,
