added links to slides and video fro FSE2020 paper

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -68,11 +68,11 @@
                                 <span class=" w3-small w3-left-align">Download Publication</span>
                             </a>
                             <br>
-                            <a href="#" target="_blank">
+                            <a href="../assets/publications/FSE2020_Presentation.pdf" target="_blank">
                                 <span class=" w3-small w3-left-align">Download Presentation</span>
                             </a>
                             <br>
-                            <a href="#" target="_blank">
+                            <a href="https://youtu.be/r8G5XA_g-uU" target="_blank">
                                 <span class=" w3-small w3-left-align">Recorded Presentation</span>
                             </a>
                         </p>
