--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -120,6 +120,13 @@
                 Listed below are publications that utilize our tools/datasets:
                 <ul style="font-size: small;">
                     <li>
+                        Elvys Soares, Márcio Ribeiro, Guilherme Amaral, Rohit Gheyi, Leo Fernandes, Alessandro Garcia,
+                        Baldoino Fonseca, and André Santos. 2020. Refactoring Test Smells: A Perspective from
+                        Open-Source Developers. In <i>Proceedings of the 5th Brazilian Symposium on Systematic and
+                            Automated Software Testing</i> (<i>SAST 20</i>). Association for Computing Machinery, New
+                        York, NY, USA, 50–59. DOI:https://doi.org/10.1145/3425174.3425212
+                    </li>
+                    <li>
                         Panichella, A., Panichella, S., Fraser, G., Sawant, A. A., & Hellendoorn, V. J. (Accepted/In
                         press). Revisiting Test Smells in Automatically Generated Tests: Limitations, Pitfalls, and
                         Opportunities. In 36th IEEE The International Conference on Software Maintenance and Evolution
