added initial entry for the MSR 2021 paper. Need to update the URL's later

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -56,6 +56,24 @@
                 Listed below are our peer-reviewed research publications around test smells:
                 <ul>
                     <li>
+                        Anthony Peruma and Christian D. Newman. 2021. <b>On the Distribution of "Simple Stupid Bugs" in
+                        Unit Test Files: An Exploratory Study</b>. In Proceedings of the 18th International Conference on
+                        Mining Software Repositories (MSR '21). Association for Computing Machinery, New York, NY, USA
+                        <p>
+                            <a href="#" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Publication</span>
+                            </a>
+                            <br>
+                            <a href="#" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Presentation</span>
+                            </a>
+                            <br>
+                            <a href="#" target="_blank">
+                                <span class=" w3-small w3-left-align">Recorded Presentation</span>
+                            </a>
+                        </p>
+                    </li>
+                    <li>
                         Anthony Peruma, Khalid Almalki, Christian D. Newman, Mohamed Wiem Mkaouer, Ali Ouni, and Fabio
                         Palomba. 2020.
                         <b>tsDetect: An Open Source Test Smells Detection Tool</b>.
