added citeation details

--- a/pages/testsmelldetector.html
+++ b/pages/testsmelldetector.html
@@ -140,6 +140,47 @@
                         target='_blank'>here</a> and <a href='assets/tsDetect_class_diagram_02.png'
                         target='_blank'>here</a>
                 </p>
+                <h5 style="text-decoration: underline">Citation</h5>
+                <p style="padding-left: 20px">
+                    If you are using our tool in your research, please cite the following papers:</a>
+                </p>
+                <p><hr style="height:1px;border:none;color:#333;background-color:#333;"><pre style="margin-left:-8em;"><code >
+                    @inproceedings{Peruma:FSE:2020:tsDetect,
+                        author = {Peruma, Anthony and Almalki, Khalid and Newman, Christian D. and Mkaouer, Mohamed Wiem and Ouni, Ali and Palomba, Fabio},
+                        title = {TsDetect: An Open Source Test Smells Detection Tool},
+                        year = {2020},
+                        isbn = {9781450370431},
+                        publisher = {Association for Computing Machinery},
+                        address = {New York, NY, USA},
+                        url = {https://doi.org/10.1145/3368089.3417921},
+                        doi = {10.1145/3368089.3417921},                        
+                        booktitle = {Proceedings of the 28th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering},
+                        pages = {1650–1654},
+                        numpages = {5},
+                        keywords = {Detection Tool, Test Smells, Software Quality},
+                        location = {Virtual Event, USA},
+                        series = {ESEC/FSE 2020}
+                    }
+                </code></pre>
+                </p>
+                <p><hr style="height:1px;border:none;color:#333;background-color:#333;"><pre style="margin-left:-8em;"><code >
+                    @inproceedings{Peruma:CASCON:2019:TestSmells,
+                        author = {Peruma, Anthony and Almalki, Khalid and Newman, Christian D. and Mkaouer, Mohamed Wiem and Ouni, Ali and Palomba, Fabio},
+                        title = {On the Distribution of Test Smells in Open Source Android Applications: An Exploratory Study},
+                        year = {2019},
+                        publisher = {IBM Corp.},
+                        address = {USA},
+                        booktitle = {Proceedings of the 29th Annual International Conference on Computer Science and Software Engineering},
+                        pages = {193–202},
+                        numpages = {10},
+                        keywords = {unit test, test smells, software quality, software maintenance},
+                        location = {Toronto, Ontario, Canada},
+                        series = {CASCON '19}                        
+                    }
+                </code></pre><hr style="height:1px;border:none;color:#333;background-color:#333;">
+                </p>
+
+
                 <h5 style="text-decoration: underline">Demo</h5>
                 <p style="padding-left: 20px">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/kzRSadHo5YA?rel=0"
