--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -56,11 +56,35 @@
                 Listed below are our peer-reviewed research publications around test smells:
                 <ul>
                     <li>
+                        Wajdi Aljedaani, Anthony Peruma, Ahmed Aljohani, Mazen Alotaibi, Mohamed Wiem Mkaouer, Ali Ouni,
+                        Christian D. Newman, Abdullatif Ghallab, and Stephanie Ludi. 2021. <b>Test Smell Detection Tools: A
+                        Systematic Mapping Study</b>. In EASE '21: The International Conference on Evaluation and Assessment
+                        in Software Engineering, June 21–23, 2021, Trondheim, Norway. ACM, New York, NY, USA
+                        <p>
+                            <a href="../assets/publications/MSR2021_TechnicalPaper.pdf" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Publication</span>
+                            </a>
+                            <br>
+                            <a href="https://doi.org/10.5281/zenodo.4726288" target="_blank">
+                                <span class=" w3-small w3-left-align">Dataset</span>
+                            </a>
+                            <br>
+                            <a href="#" target="_blank">
+                                <span class=" w3-small w3-left-align">Download Presentation</span>
+                            </a>
+                            <br>
+                            <a href="#" target="_blank">
+                                <span class=" w3-small w3-left-align">Recorded Presentation</span>
+                            </a>
+                        </p>
+                    </li>
+                    <li>
                         Anthony Peruma and Christian D. Newman. 2021. <b>On the Distribution of "Simple Stupid Bugs" in
-                        Unit Test Files: An Exploratory Study</b>. In Proceedings of the 18th International Conference on
+                            Unit Test Files: An Exploratory Study</b>. In Proceedings of the 18th International
+                        Conference on
                         Mining Software Repositories (MSR '21). Association for Computing Machinery, New York, NY, USA
                         <p>
-                            <a href="#" target="_blank">
+                            <a href="../assets/publications/MSR2021_TechnicalPaper.pdf" target="_blank">
                                 <span class=" w3-small w3-left-align">Download Publication</span>
                             </a>
                             <br>
