added link to msr presentation recording

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -92,7 +92,7 @@
                                 <span class=" w3-small w3-left-align">Download Presentation</span>
                             </a>
                             <br>
-                            <a href="#" target="_blank">
+                            <a href="https://youtu.be/rt-X5GGADik" target="_blank">
                                 <span class=" w3-small w3-left-align">Recorded Presentation</span>
                             </a>
                         </p>
