--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -162,6 +162,11 @@
                 Listed below are publications that utilize our tools/datasets:
                 <ul style="font-size: small;">
                     <li>
+                        Kim, D.J., Chen, TH.(. & Yang, J. The secret life of test smells - an empirical study on test
+                        smell evolution and maintenance. Empir Software Eng 26, 100 (2021).
+                        https://doi.org/10.1007/s10664-021-09969-1
+                    </li>
+                    <li>
                         Elvys Soares, Márcio Ribeiro, Guilherme Amaral, Rohit Gheyi, Leo Fernandes, Alessandro Garcia,
                         Baldoino Fonseca, and André Santos. 2020. Refactoring Test Smells: A Perspective from
                         Open-Source Developers. In <i>Proceedings of the 5th Brazilian Symposium on Systematic and
