updated links to artifacts

--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -69,11 +69,11 @@
                                 <span class=" w3-small w3-left-align">Dataset</span>
                             </a>
                             <br>
-                            <a href="#" target="_blank">
+                            <a href="../assets/publications/EASE2021_Presentation.pdf" target="_blank">
                                 <span class=" w3-small w3-left-align">Download Presentation</span>
                             </a>
                             <br>
-                            <a href="#" target="_blank">
+                            <a href="https://www.youtube.com/watch?v=h9g437vU2gg" target="_blank">
                                 <span class=" w3-small w3-left-align">Recorded Presentation</span>
                             </a>
                         </p>
