--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -203,6 +203,12 @@
                         (CEUR Workshop Proceedings; Vol. 2510). CEUR-WS.org.
                     </li>
                 </ul>
+                <p style="font-size: small;">
+                    <i><a href="https://peruma.me" target="_blank">
+                            Is the above list missing a publication? Please let us know, and we will be happy to update
+                            the list!
+                    </a></i>
+                </p>
             </p>
         </div>
     </div>
