--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -162,42 +162,42 @@
                 Listed below are publications that utilize our tools/datasets:
                 <ul style="font-size: small;">
                     <li>
-                        Kim, D.J., Chen, TH.(. & Yang, J. The secret life of test smells - an empirical study on test
-                        smell evolution and maintenance. Empir Software Eng 26, 100 (2021).
+                        Kim, D.J., Chen, TH.(. & Yang, J. <strong>The secret life of test smells - an empirical study on test
+                        smell evolution and maintenance</strong>. Empir Software Eng 26, 100 (2021).
                         https://doi.org/10.1007/s10664-021-09969-1
                     </li>
                     <li>
                         Elvys Soares, Márcio Ribeiro, Guilherme Amaral, Rohit Gheyi, Leo Fernandes, Alessandro Garcia,
-                        Baldoino Fonseca, and André Santos. 2020. Refactoring Test Smells: A Perspective from
-                        Open-Source Developers. In <i>Proceedings of the 5th Brazilian Symposium on Systematic and
+                        Baldoino Fonseca, and André Santos. 2020. <strong>Refactoring Test Smells: A Perspective from
+                        Open-Source Developers</strong>. In <i>Proceedings of the 5th Brazilian Symposium on Systematic and
                             Automated Software Testing</i> (<i>SAST 20</i>). Association for Computing Machinery, New
                         York, NY, USA, 50–59. DOI:https://doi.org/10.1145/3425174.3425212
                     </li>
                     <li>
                         Panichella, A., Panichella, S., Fraser, G., Sawant, A. A., & Hellendoorn, V. J. (Accepted/In
-                        press). Revisiting Test Smells in Automatically Generated Tests: Limitations, Pitfalls, and
-                        Opportunities. In 36th IEEE The International Conference on Software Maintenance and Evolution
+                        press). <strong>Revisiting Test Smells in Automatically Generated Tests: Limitations, Pitfalls, and
+                        Opportunities</strong>. In 36th IEEE The International Conference on Software Maintenance and Evolution
                         (ICSME 2020) IEEE. https://doi.org/10.5281/zenodo.4000852
                     </li>
                     <li>
-                        G. Fraser, A. Gambi and J. M. Rojas, "Teaching Software Testing with the Code Defenders Testing
-                        Game: Experiences and Improvements," 2020 IEEE International Conference on Software Testing,
+                        G. Fraser, A. Gambi and J. M. Rojas, "<strong>Teaching Software Testing with the Code Defenders Testing
+                        Game: Experiences and Improvements</strong>," 2020 IEEE International Conference on Software Testing,
                         Verification and Validation Workshops (ICSTW), Porto, Portugal, 2020, pp. 461-464, doi:
                         10.1109/ICSTW50294.2020.00082.
                     </li>
                     <li>
-                        Dong Jae Kim. 2020. An Empirical Study on the Evolution of Test Smell. In Proceedings of ICSE
+                        Dong Jae Kim. 2020. <strong>An Empirical Study on the Evolution of Test Smell</strong>. In Proceedings of ICSE
                         2020: the 42nd International Conference on Software Engineering (ICSE 2020). ACM, New York,
                         NY, USA, 3 pages. https://doi.org/10.1145/1122445.1122456
                     </li>
                     <li>
                         Spadini, Davide, Martin Schvarcbacher, Ana-Maria Oprescu, Magiel Bruntink, and Alberto
-                        Bacchelli. 2020. Investigating Severity Thresholds for Test Smells. In Proceedings of the 17th
+                        Bacchelli. 2020. <strong>Investigating Severity Thresholds for Test Smells</strong>. In Proceedings of the 17th
                         International Conference on Mining Software Repositories (MSR 2020).
                     </li>
                     <li>
-                        Schvarcbacher, M., Spadini, D., Bruntink, M., & Oprescu, A. (2019). Investigating developer
-                        perception on test smells using better code hub - Work in progress -. In A. Etien (Ed.), SATTOSE
+                        Schvarcbacher, M., Spadini, D., Bruntink, M., & Oprescu, A. (2019). <strong>Investigating developer
+                        perception on test smells using better code hub - Work in progress -</strong>. In A. Etien (Ed.), SATTOSE
                         2019 Seminar Series on Advanced Techniques & Tools for Software Evolution: Proceedings of the
                         Seminar Series on Advanced Techniques & Tools for Software Evolution (SATTOSE 2019) (pp. 1-6).
                         (CEUR Workshop Proceedings; Vol. 2510). CEUR-WS.org.
