--- a/pages/testsmellpublications.html
+++ b/pages/testsmellpublications.html
@@ -166,36 +166,36 @@
                         smell evolution and maintenance</strong>. Empir Software Eng 26, 100 (2021).
                         https://doi.org/10.1007/s10664-021-09969-1
                     </li>
-                    <li>
+                    <li style="padding: 5px 0px;">
                         Elvys Soares, Márcio Ribeiro, Guilherme Amaral, Rohit Gheyi, Leo Fernandes, Alessandro Garcia,
                         Baldoino Fonseca, and André Santos. 2020. <strong>Refactoring Test Smells: A Perspective from
                         Open-Source Developers</strong>. In <i>Proceedings of the 5th Brazilian Symposium on Systematic and
                             Automated Software Testing</i> (<i>SAST 20</i>). Association for Computing Machinery, New
                         York, NY, USA, 50–59. DOI:https://doi.org/10.1145/3425174.3425212
                     </li>
-                    <li>
+                    <li style="padding: 5px 0px;">
                         Panichella, A., Panichella, S., Fraser, G., Sawant, A. A., & Hellendoorn, V. J. (Accepted/In
                         press). <strong>Revisiting Test Smells in Automatically Generated Tests: Limitations, Pitfalls, and
                         Opportunities</strong>. In 36th IEEE The International Conference on Software Maintenance and Evolution
                         (ICSME 2020) IEEE. https://doi.org/10.5281/zenodo.4000852
                     </li>
-                    <li>
+                    <li style="padding: 5px 0px;">
                         G. Fraser, A. Gambi and J. M. Rojas, "<strong>Teaching Software Testing with the Code Defenders Testing
                         Game: Experiences and Improvements</strong>," 2020 IEEE International Conference on Software Testing,
                         Verification and Validation Workshops (ICSTW), Porto, Portugal, 2020, pp. 461-464, doi:
                         10.1109/ICSTW50294.2020.00082.
                     </li>
-                    <li>
+                    <li style="padding: 5px 0px;">
                         Dong Jae Kim. 2020. <strong>An Empirical Study on the Evolution of Test Smell</strong>. In Proceedings of ICSE
                         2020: the 42nd International Conference on Software Engineering (ICSE 2020). ACM, New York,
                         NY, USA, 3 pages. https://doi.org/10.1145/1122445.1122456
                     </li>
-                    <li>
+                    <li style="padding: 5px 0px;">
                         Spadini, Davide, Martin Schvarcbacher, Ana-Maria Oprescu, Magiel Bruntink, and Alberto
                         Bacchelli. 2020. <strong>Investigating Severity Thresholds for Test Smells</strong>. In Proceedings of the 17th
                         International Conference on Mining Software Repositories (MSR 2020).
                     </li>
-                    <li>
+                    <li style="padding: 5px 0px;">
                         Schvarcbacher, M., Spadini, D., Bruntink, M., & Oprescu, A. (2019). <strong>Investigating developer
                         perception on test smells using better code hub - Work in progress -</strong>. In A. Etien (Ed.), SATTOSE
                         2019 Seminar Series on Advanced Techniques & Tools for Software Evolution: Proceedings of the
